<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_left_arrow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="1dp"
                    android:text="@string/myaacount"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="Hi, cscodetech"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="+919876543210" />

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="cscode@gmail.com" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_edit"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Edit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/colorgrey1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_cart_bottom" />

                <TextView
                    android:id="@+id/txt_recentorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/recent_order"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_cart_bottom" />

                <TextView
                    android:id="@+id/txt_cuorier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="Courier Order"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvl_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_map_pin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/manage_address"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lvl_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_wallet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/wallet"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lvl_refer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_referandearn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/invite_friend_amp_earn"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvl_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_faq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/faq_s"
                    android:textColor="@color/black" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />


            <LinearLayout
                android:id="@+id/lvl_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:drawableTint="@color/colorgrey"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/logout"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>